now with erechnung xml embedded in the pdf. why on earth is there no c# lib that can do this for free?

--- a/FredsWorkmate/Resources/DocumentGeneration.Invoice.de.resx
+++ b/FredsWorkmate/Resources/DocumentGeneration.Invoice.de.resx
@@ -162,4 +162,7 @@
   <data name="VAT IdNr." xml:space="preserve">
     <value>Umsatzsteuer-IdNr.</value>
   </data>
+  <data name="Delivery Date" xml:space="preserve">
+    <value>Lieferdatum</value>
+  </data>
 </root>
